# containerlab_designer

./: CODE_REVIEW.md  IMPLEMENTATION_GUIDE.md  IMPROVEMENTS.md  PRD.md  QUICKSTART.md  api_tester.html  main_api_v2.html  next_app_v2.js  plan.md  pyproject.toml  requirements.txt
api/: main.py
app_modules/: interaction_controller.js  remote_session_manager.js  render_helpers.js
clab/: __init__.py  api_client.py  kind_image_login_registry.json  mock_server.py  node_layouts.json
models/: topology.py
