[project]
name = "next-ui-containerlab"
version = "0.1.0"
description = "next_ui topology designer with containerlab API integration"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
    "httpx>=0.27.0",
    "PyYAML>=6.0.2",
    "python-dotenv>=1.0.0",
]

[tool.uv]

[dependency-groups]
dev = []
